# seldom_state

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
.zed/: settings.json
examples/: README.md  chase.rs  done.rs  input.rs
src/: bundle.rs  lib.rs  machine.rs  set.rs  stage.rs  state.rs  trigger.rs
src/trigger/: input.rs
