[package]
name = "seldom_state"
version = "0.7.0"
edition = "2021"
categories = [ "game-development" ]
description = "Component-based state machine plugin for Bevy. Useful for AI, player state, and other entities that occupy various states."
exclude = [ "assets/" ]
keywords = [ "gamedev", "bevy", "ai", "state-machine" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_state"

[features]
leafwing_input = [ "dep:leafwing-input-manager" ]

[dependencies]
bevy = { version = "0.11", default-features = false }
either = "1"
leafwing-input-manager = { version = "0.10", default-features = false, optional = true }
seldom_fn_plugin = "0.4"

[dev-dependencies]
bevy = "0.11"
leafwing-input-manager = "0.10"

[[example]]
name = "input"
required-features = [ "leafwing_input" ]

[package.metadata.docs.rs]
all-features = true
