[package]
name = "seldom_state"
version = "0.14.0"
edition = "2021"
categories = ["game-development"]
description = "Component-based state machine plugin for Bevy. Useful for AI, player state, and other entities that occupy various states."
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "ai", "state-machine"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_state"

[features]
leafwing_input = ["dep:leafwing-input-manager"]
# This lets you serialize/deserialize some types. Not `StateMachine`, though.
serde = ["dep:serde"]

[dependencies]
either = "1.9"
serde = { version = "1.0", features = ["derive"], optional = true }
variadics_please = "1.1"
bevy_math = { version = "0.17.1", default-features = false, features = ["std"] }
bevy_ecs = { version = "0.17.1", default-features = false }
bevy_app = { version = "0.17.1", default-features = false }
bevy_log = { version = "0.17.1", default-features = false }
bevy_utils = { version = "0.17.1", default-features = false }
bevy_derive = { version = "0.17.1", default-features = false }
leafwing-input-manager = { version = "0.18.0", default-features = false, optional = true }

[dev-dependencies]
bevy = "0.17.1"
leafwing-input-manager = { version = "0.18.0" }

[[example]]
name = "input"
required-features = ["leafwing_input"]

[package.metadata.docs.rs]
all-features = true
